add login component, add modules in app.module.ts, add global styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+*
+{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 
+html
+{
+    font-size: 62.5%;
+}
+
+body {
+    color: #333;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
