add signup.service.ts, signup.ts

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,20 +1,26 @@
 <div class=" Hero signupwrapper">
     <div class = 'signupcontainer'>   
         <h1 class='signupform__heading'>Signup</h1>
-        <form class="signupform" #signupform = "ngForm" novalidate (ngSubmit) = "onSubmit($event)">
+        <form class="signupform" #f="ngForm" novalidate (ngSubmit) = "f.form.valid && onSubmit(f.value)">
             <div class="row">
                 <div class="col-12 col-md-5 inputgroup">
                     <div>
                         <label class="label">Title</label>
-                        <input class="input--style-4" type="text" name="Title" required autocomplete="off" ngModel>
-                        
+                        <input class="input--style-4" type="text" name="title" required autocomplete="off" 
+                           ngModel #title = "ngModel">
+                    </div>
+                    <div *ngIf="title.invalid && (title.dirty || title.touched ||f.submitted)">
+                        <small *ngIf="title.errors.required">
+                            Enter a title
+                        </small>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 inputgroup">
                     <div>
                         <label class="label">First name</label>
-                        <input class="input--style-4" type="text" name="first_name" required autocomplete="off" ngModel #name="ngModel">
-                        <div *ngIf="name.invalid && (name.dirty || name.touched)">
+                        <input class="input--style-4" type="text" name="first_name" required autocomplete="off" 
+                        ngModel  #name="ngModel">
+                        <div *ngIf="name.invalid && (name.dirty || name.touched ||f.submitted)">
                             <small *ngIf="name.errors.required">
                                 Name is required.
                             </small>
@@ -27,9 +33,9 @@
                 <div class="col-12 col-md-5 inputgroup">
                     <div>
                         <label class="label">last name</label>
-                        <input class="input--style-4" type="text" name="last_name" required autocomplete="off" ngModel
-                             #last_name = "ngModel">
-                        <div *ngIf="last_name.invalid && (last_name.dirty || last_name.touched)">
+                        <input class="input--style-4" type="text" name="last_name" required autocomplete="off" 
+                         ngModel  #last_name = "ngModel">
+                        <div *ngIf=" last_name.invalid && (last_name.dirty || last_name.touched ||f.submitted)">
                             <small *ngIf="last_name.errors.required">
                                 Last Name is required.
                             </small>
@@ -41,7 +47,7 @@
                         <label class="label">DOB</label>
                         <input class="input--style-4"  onfocus="(this.type='date')" onblur="(this.type='text')" name="dob" 
                             type='text' required autocomplete="off" ngModel #dob = "ngModel">
-                            <div *ngIf = "dob.invalid && (dob.dirty || dob.touched)">
+                            <div *ngIf = "dob.invalid && (dob.dirty || dob.touched ||f.submitted)">
                                 <small *ngIf = "dob.errors.required">
                                     Date Of Birth is required
                                 </small>
@@ -53,15 +59,14 @@
                 <div class="col-12 col-md-5 inputgroup">
                     <div class="pwdcontainer">
                         <label class="label">Password</label>
-                        <input class="input--style-4"  [type]="visible ? 'text' : 'password'" name="Password" required 
-                            autocomplete="off" ngModel #Password = "ngModel" 
+                        <input class="input--style-4"  [type]="visible ? 'text' : 'password'" name="password" required 
+                            autocomplete="off" ngModel #password = "ngModel" 
                             minlength="8">
                         <fa-icon [icon]  =  "visible ? faEye : faEyeSlash"  (click) = "onClick()" class="loginform__toggleicon"></fa-icon>
 
-                        <div *ngIf="Password.invalid && (Password.dirty || Password.touched)">
-                            <small *ngIf="Password.errors?.required">Password is required</small>
-                            <small *ngIf="Password.errors?.minlength">Password must be at least 8 charachters</small>
-                            <small *ngIf="Password.errors?.pattern">This is not a valid Email</small>
+                        <div *ngIf="password.invalid && (password.dirty || password.touched ||f.submitted)">
+                            <small *ngIf="password.errors?.required">Password is required</small>
+                            <small *ngIf="password.errors?.minlength">Password must be at least 8 charachters</small>
                         </div>
 
                      </div> 
@@ -69,10 +74,15 @@
                 <div class="col-12 col-md-5 inputgroup">
                     <div class="pwdcontainer">
                         <label class="label">Confirm Password</label>
-                        <input class="input--style-4"  [type]="visible ? 'text' : 'password'" name="Password" required autocomplete="off" ngModel>
+                        <input class="input--style-4"  [type]="visible ? 'text' : 'password'" name="cnfpwd" 
+                            required autocomplete="off" ngModel #cnfpwd = "ngModel" checkpwdvalidator = "password">
                         <fa-icon [icon]  =  "visible ? faEye : faEyeSlash "  (click) = "onClick()" class="loginform__toggleicon"></fa-icon>
-
                      </div>
+
+                     <div *ngIf="cnfpwd.invalid && (cnfpwd.dirty || cnfpwd.touched ||f.submitted)">
+                        <small *ngIf="cnfpwd.errors?.required">Password is required</small>
+                        <small *ngIf="cnfpwd.errors?.notEqual">Passswords do not match</small>
+                    </div>
                 </div>
                 
             </div>
@@ -81,22 +91,23 @@
                 <div class="col-12 col-md-5 inputgroup">
                     <div>
                         <label class="label">Email</label>
-                        <input class="input--style-4" type="email" name="Email" required autocomplete="off" 
-                            ngModel #Email = "ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"  >
-                            <div *ngIf="Email.invalid && (Email.dirty || Email.touched)">
-                                <small><mat-error *ngIf="Email.errors?.required">Email is a required field</mat-error></small>
-                                <small *ngIf="Email.errors?.pattern">This is not a valid Email</small>
+                        <input class="input--style-4" type="email" name="email_id" required autocomplete="off" 
+                         ngModel #email_id = "ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"  >
+                            <div *ngIf="email_id.invalid && (email_id.dirty || email_id.touched ||f.submitted)">
+                                <small><mat-error *ngIf="email_id.errors?.required">Email is a required field</mat-error></small>
+                                <small *ngIf="email_id.errors?.pattern">This is not a valid Email</small>
                             </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 inputgroup">
                     <div>
                         <label class="label">Phone Number</label>
-                        <input class="input--style-4" type="tel" name="Phone" required autocomplete="off" ngModel
-                            #Phone = "ngModel" minlength="10" maxlength="10">
-                        <div *ngIf="Phone.invalid && (Phone.dirty || Phone.touched)">
-                            <small *ngIf="Phone.errors?.required">Phone Number is a required field</small>
-                            <small *ngIf="Phone.errors?.minlength">Phone number must be of 10 digits</small>
+                        <input class="input--style-4" type="tel" name="mobile" required autocomplete="off" ngModel
+                            #mobile = "ngModel" minlength="10" maxlength="10" pattern="^[0-9]*$">
+                        <div *ngIf=" mobile.invalid && (mobile.dirty || mobile.touched||f.submitted)">
+                            <div><small *ngIf = "mobile.errors.pattern">Enter a valid Phone number</small></div>
+                            <small *ngIf="mobile.errors?.required">Phone Number is a required field</small>
+                            <small *ngIf="mobile.errors?.minlength">Phone number must be of 10 digits</small>
                         </div>
                      </div>
                 </div>
