update footer.css, footer.html made the footer responsive

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container">
+    <div class="Container">
         <div class="iconcontainer">
             <div class="fa fa-facebook"></div>
             <div class="fa fa-twitter "></div>
