--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,16 +1,21 @@
 footer
 {
-    padding: 5rem 3.5rem;
+    padding: 3rem 3.5rem;
     background-color: #111;
     max-width: 100vw;
+    min-width: 100vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    position: fixed;
+    bottom: 0;
 }
-.container
+.Container
 {
     display: flex;
-    justify-content: space-between !important;
+    align-items: center;
+    justify-content: space-between;
+    width: 85%;
 
 }
 .fa {
@@ -35,4 +40,23 @@ footer
 .copyrighttext
 {
     color: rgba(255, 250, 240, 0.918);
+}
+
+@media screen and (max-width:768px)
+{
+     footer 
+     {
+       padding: 3rem 0.5rem;
+     }
+    .Container 
+    {
+      width: 100%;
+    }
+
+    .fa 
+    {
+      font-size: 1.8rem;
+      margin: 0.5rem;
+    }
+    
 }
