update styles.css hide horizontal overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ body {
     color: #333;
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden !important;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
