--- a/src/app/components/airplanecard/airplanecard.component.css
+++ b/src/app/components/airplanecard/airplanecard.component.css
@@ -14,10 +14,11 @@
     align-items: center;
     width: 60%;
     box-shadow: 0px 3px 5px #999;
-    height: 15rem;
+    height: 12rem;
     border-radius: 1.5rem;
     font-family: 'Poppins';
     background-color: #fff;
+    margin: 1rem 0;
 
 }
 .card__section
@@ -90,4 +91,54 @@
     color: floralwhite;
     background-color:#6c5ce7;
     cursor: pointer;
+}
+
+@media screen and (min-width:768px) and (max-width:1100px)
+{
+
+
+    .card 
+    {
+        width: 85%;
+    }
+
+}
+@media screen and (max-width:768px)
+{
+    .card 
+    {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width:500px)
+{
+    .card__section 
+    {
+        width: 25%;
+    }
+    .card__duration
+    {
+        display: none;
+    }
+   
+    .card__duration--name,.card__booking--price,.card__location--time,.card__location--place
+
+    {
+        font-size: 1rem;
+        color: #333;
+    }
+
+    .book 
+    {
+    border-radius: 1rem;
+    padding: 0.5rem;
+    outline: none;
+    border: none;
+    width: 4rem;
+    color: floralwhite;
+    background-color:#6c5ce7;
+    cursor: pointer;
+    font-size: 1rem;
+    }
 }
