--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,13 +1,12 @@
 footer
 {
-    padding: 3rem 3.5rem;
+    padding: 1.5rem 3.5rem;
     background-color: #111;
     max-width: 100vw;
     min-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
     bottom: 0;
 }
 .Container
@@ -57,6 +56,7 @@ footer
     {
       font-size: 1.8rem;
       margin: 0.5rem;
+      width: 2.5rem;
     }
     
 }
