update displayflight.html, displayflight.css add header on displayflight page

--- a/src/app/components/displayflight/displayflight.component.html
+++ b/src/app/components/displayflight/displayflight.component.html
@@ -1,4 +1,16 @@
-    <app-airplanecard [flightdetails] = "flights" class="flightdetailwrapper">    
+ <header>
+    <div class="logo">
+        <a [routerLink]="['/']"> LOGO </a>   
+     </div>
+    <div class="nav-items">
+        <ul>
+            <li><a [routerLink]="['/flight/search']">Search</a></li>
+            <li><a [routerLink]="['/login']">Login</a></li>
+            <li><a [routerLink]="['/signup']">Signup</a></li>
+          </ul>
+    </div>
+ </header>    
+ <app-airplanecard [flightdetails] = "flights" class="flightdetailwrapper">    
 
     </app-airplanecard>
 
