--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -2,8 +2,9 @@
 {
     height: 90vh;
     display: flex;
-    background-image: linear-gradient(to bottom,#051322,#15457c);   
-     justify-content: center;
+    /* background-image: linear-gradient(to bottom,#051322,#15457c);    */
+    background-color: #4834d4;
+    justify-content: center;
     align-items: center;
 }
 .row 
@@ -83,4 +84,14 @@
         min-height: 90%;
         min-width: 90%;
     }
+}
+
+@media screen and (max-width:500px)
+{
+    .header
+    {
+        height: fit-content;
+        padding: 1rem;
+    }
+   
 }
