--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,6 +2,9 @@
     <div class = 'signupcontainer'>   
         <h1 class='signupform__heading'>Signup</h1>
         <form class="signupform" #f="ngForm" novalidate (ngSubmit) = "f.form.valid && onSubmit(f.value)">
+            <div *ngIf = "error!=null && timer == true ? true : false" class="error-msg">
+                {{error}}
+            </div>
             <div class="row">
                 <div class="col-12 col-md-5 inputgroup">
                     <div>
