update displayflight component add headings on the page adjust css

--- a/src/app/components/displayflight/displayflight.component.css
+++ b/src/app/components/displayflight/displayflight.component.css
@@ -3,9 +3,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 3rem 0;
-    background-color: #f2f2f2ff;
-    height: 100vh;
+    padding: 2.5rem 0;
+    background-color: #fdfdfd;
+    min-height: 100vh;
     flex-direction: column;
 
 }
@@ -72,4 +72,57 @@ ul {
   a:hover:after { 
     width: 90%; 
     left: 1rem; 
+  }
+
+  .travel-details
+  {
+    background-color:  #fdfdfd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem 0;
+   
+  }
+
+  .travel-details>div
+  {
+    width: 60%;
+  }
+  .heading--title
+  {
+    font-size: 3rem;
+    font-weight: 400;
+    font-family: 'Roboto';
+    text-transform: capitalize;
+    letter-spacing: 0.05rem;
+    color: rgba(51, 51, 51, 0.788);
+    margin-bottom: 0.8rem;
+  }
+  .heading--results
+  {
+    color: rgba(51, 51, 51, 0.671);
+  }
+  .heading__location
+  {
+    padding-top: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .heading__location--place
+  {
+    font-size: 3.5rem;
+    text-transform: capitalize;
+    letter-spacing: 0rem;
+    color: rgba(51, 51, 51, 0.851);
+    font-weight: 400;
+    padding-right: 1.5rem;
+  }
+
+  .heading__location--arrow
+  {
+    color: rgba(51, 51, 51, 0.596);
+    font-size: 3.5rem;
+    padding-right:1.5rem;
   }
