update airplane component log data to console on button click

--- a/src/app/components/airplanecard/airplanecard.component.html
+++ b/src/app/components/airplanecard/airplanecard.component.html
@@ -35,7 +35,7 @@
 
         </div>
         <div class="card__booking--book">
-            <button class="book">Book Now</button>
+            <button class="book" (click) = "onBookNow(a.flight_number,a.departure_location,a.arrival_location)">Book Now</button>
         </div>
     </div>
 </div>
