--- a/src/app/components/airplanecard/airplanecard.component.css
+++ b/src/app/components/airplanecard/airplanecard.component.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     width: 60%;
-    box-shadow: 0px 3px 5px #999;
+    box-shadow: 0px 3px 5px #ccc;
     height: 12rem;
     border-radius: 1.5rem;
     font-family: 'Poppins';
